[gd_scene load_steps=13 format=3 uid="uid://bdlbgf6olmp1a"]

[ext_resource type="TileSet" uid="uid://b8qtpxxeen3r2" path="res://Tileset/School.tres" id="1_31duj"]
[ext_resource type="Script" path="res://Scenario/School.gd" id="1_x0bge"]
[ext_resource type="PackedScene" uid="uid://jwsp34euvu5m" path="res://Character/PNJ/Arnaud.tscn" id="3_0n481"]
[ext_resource type="PackedScene" uid="uid://dop2u747ddg61" path="res://Character/Player/Player.tscn" id="3_4tqad"]
[ext_resource type="PackedScene" uid="uid://ixelty74jn4y" path="res://Character/PNJ/Bastien.tscn" id="4_4hwa7"]
[ext_resource type="PackedScene" uid="uid://cba3rhso7w7qe" path="res://Interfaces/Pause.tscn" id="4_k1pyy"]
[ext_resource type="PackedScene" uid="uid://ba32qv24xhbs6" path="res://Character/PNJ/Marie.tscn" id="5_g6qpd"]
[ext_resource type="PackedScene" uid="uid://ddt1kps38yoew" path="res://Character/PNJ/Tristan.tscn" id="6_53ft2"]
[ext_resource type="PackedScene" uid="uid://bhberw05o4w4q" path="res://Character/PNJ/Policier2.tscn" id="7_bf800"]
[ext_resource type="PackedScene" uid="uid://dcqftfxp40amb" path="res://Scenario/bedroom.tscn" id="9_7h288"]
[ext_resource type="PackedScene" uid="uid://d3f6exr7snkdd" path="res://Phone/Phone.tscn" id="10_ij143"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uw4gg"]
size = Vector2(29, 4)

[node name="School" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_x0bge")

[node name="TileMap" type="TileMap" parent="."]
clip_children = 2
y_sort_enabled = true
tile_set = ExtResource("1_31duj")
format = 2
layer_0/name = "Fond"
layer_0/tile_data = PackedInt32Array(0, 786433, 0, 65536, 786433, 0, 131072, 786433, 0, 196608, 786433, 0, 262144, 786433, 0, 327680, 786433, 0, 393216, 786433, 0, 458752, 786433, 0, 524288, 786433, 0, 589824, 786433, 0, 655360, 786433, 0, 720896, 786433, 0, 786432, 786433, 0, 851968, 786433, 0, 917504, 786433, 0, 983040, 786433, 0, 1048576, 786433, 0, 1114112, 786433, 0, 1179648, 786433, 0, 1245184, 786433, 0, 1, 786433, 0, 65537, 786433, 0, 131073, 786433, 0, 196609, 786433, 0, 262145, 786433, 0, 327681, 786433, 0, 393217, 786433, 0, 458753, 786433, 0, 524289, 786433, 0, 589825, 786433, 0, 655361, 786433, 0, 720897, 786433, 0, 786433, 786433, 0, 851969, 786433, 0, 917505, 786433, 0, 983041, 786433, 0, 1048577, 786433, 0, 1114113, 786433, 0, 1179649, 786433, 0, 1245185, 786433, 0, 2, 786433, 0, 65538, 786433, 0, 131074, 786433, 0, 196610, 786433, 0, 262146, 786433, 0, 327682, 786433, 0, 393218, 786433, 0, 458754, 786433, 0, 524290, 786433, 0, 589826, 786433, 0, 655362, 786433, 0, 720898, 786433, 0, 786434, 786433, 0, 851970, 786433, 0, 917506, 786433, 0, 983042, 786433, 0, 1048578, 786433, 0, 1114114, 786433, 0, 1179650, 786433, 0, 1245186, 786433, 0, 3, 786433, 0, 65539, 786433, 0, 131075, 786433, 0, 196611, 786433, 0, 262147, 786433, 0, 327683, 786433, 0, 393219, 786433, 0, 458755, 786433, 0, 524291, 786433, 0, 589827, 786433, 0, 655363, 786433, 0, 720899, 786433, 0, 786435, 786433, 0, 851971, 786433, 0, 917507, 786433, 0, 983043, 786433, 0, 1048579, 786433, 0, 1114115, 786433, 0, 1179651, 786433, 0, 1245187, 786433, 0, 4, 786433, 0, 65540, 786433, 0, 131076, 786433, 0, 196612, 786433, 0, 262148, 786433, 0, 327684, 786433, 0, 393220, 786433, 0, 458756, 786433, 0, 524292, 786433, 0, 589828, 786433, 0, 655364, 786433, 0, 720900, 786433, 0, 786436, 786433, 0, 851972, 786433, 0, 917508, 786433, 0, 983044, 786433, 0, 1048580, 786433, 0, 1114116, 786433, 0, 1179652, 786433, 0, 1245188, 786433, 0, 5, 786433, 0, 65541, 786433, 0, 131077, 786433, 0, 196613, 786433, 0, 262149, 786433, 0, 327685, 786433, 0, 393221, 786433, 0, 458757, 786433, 0, 524293, 786433, 0, 589829, 786433, 0, 655365, 786433, 0, 720901, 786433, 0, 786437, 786433, 0, 851973, 786433, 0, 917509, 786433, 0, 983045, 786433, 0, 1048581, 786433, 0, 1114117, 786433, 0, 1179653, 786433, 0, 1245189, 786433, 0, 6, 786433, 0, 65542, 786433, 0, 131078, 786433, 0, 196614, 786433, 0, 262150, 786433, 0, 327686, 786433, 0, 393222, 786433, 0, 458758, 786433, 0, 524294, 786433, 0, 589830, 786433, 0, 655366, 786433, 0, 720902, 786433, 0, 786438, 786433, 0, 851974, 786433, 0, 917510, 786433, 0, 983046, 786433, 0, 1048582, 786433, 0, 1114118, 786433, 0, 1179654, 786433, 0, 1245190, 786433, 0, 7, 786433, 0, 65543, 786433, 0, 131079, 786433, 0, 196615, 786433, 0, 262151, 786433, 0, 327687, 786433, 0, 393223, 786433, 0, 458759, 786433, 0, 524295, 786433, 0, 589831, 786433, 0, 655367, 786433, 0, 720903, 786433, 0, 786439, 786433, 0, 851975, 786433, 0, 917511, 786433, 0, 983047, 786433, 0, 1048583, 786433, 0, 1114119, 786433, 0, 1179655, 786433, 0, 1245191, 786433, 0, 8, 786433, 0, 65544, 786433, 0, 131080, 786433, 0, 196616, 786433, 0, 262152, 786433, 0, 327688, 786433, 0, 393224, 786433, 0, 458760, 786433, 0, 524296, 786433, 0, 589832, 786433, 0, 655368, 786433, 0, 720904, 786433, 0, 786440, 786433, 0, 851976, 786433, 0, 917512, 786433, 0, 983048, 786433, 0, 1048584, 786433, 0, 1114120, 786433, 0, 1179656, 786433, 0, 1245192, 786433, 0, 9, 786433, 0, 65545, 786433, 0, 131081, 786433, 0, 196617, 786433, 0, 262153, 786433, 0, 327689, 786433, 0, 393225, 786433, 0, 458761, 786433, 0, 524297, 786433, 0, 589833, 786433, 0, 655369, 786433, 0, 720905, 786433, 0, 786441, 786433, 0, 851977, 786433, 0, 917513, 786433, 0, 983049, 786433, 0, 1048585, 786433, 0, 1114121, 786433, 0, 1179657, 786433, 0, 1245193, 786433, 0, 10, 786433, 0, 65546, 786433, 0, 131082, 786433, 0, 196618, 786433, 0, 262154, 786433, 0, 327690, 786433, 0, 393226, 786433, 0, 458762, 786433, 0, 524298, 786433, 0, 589834, 786433, 0, 655370, 786433, 0, 720906, 786433, 0, 786442, 786433, 0, 851978, 786433, 0, 917514, 786433, 0, 983050, 786433, 0, 1048586, 786433, 0, 1114122, 786433, 0, 1179658, 786433, 0, 1245194, 786433, 0, 11, 786433, 0, 65547, 786433, 0, 131083, 786433, 0, 196619, 786433, 0, 262155, 786433, 0, 327691, 786433, 0, 393227, 786433, 0, 458763, 786433, 0, 524299, 786433, 0, 589835, 786433, 0, 655371, 786433, 0, 720907, 786433, 0, 786443, 786433, 0, 851979, 786433, 0, 917515, 786433, 0, 983051, 786433, 0, 1048587, 786433, 0, 1114123, 786433, 0, 1179659, 786433, 0, 1245195, 786433, 0, 12, 786433, 0, 65548, 786433, 0, 131084, 786433, 0, 196620, 786433, 0, 262156, 786433, 0, 327692, 786433, 0, 393228, 786433, 0, 458764, 786433, 0, 524300, 786433, 0, 589836, 786433, 0, 655372, 786433, 0, 720908, 786433, 0, 786444, 786433, 0, 851980, 786433, 0, 917516, 786433, 0, 983052, 786433, 0, 1048588, 786433, 0, 1114124, 786433, 0, 1179660, 786433, 0, 1245196, 786433, 0, 13, 786433, 0, 65549, 786433, 0, 131085, 786433, 0, 196621, 786433, 0, 262157, 786433, 0, 327693, 786433, 0, 393229, 786433, 0, 458765, 786433, 0, 524301, 786433, 0, 589837, 786433, 0, 655373, 786433, 0, 720909, 786433, 0, 786445, 786433, 0, 851981, 786433, 0, 917517, 786433, 0, 983053, 786433, 0, 1048589, 786433, 0, 1114125, 786433, 0, 1179661, 786433, 0, 1245197, 786433, 0, 14, 786433, 0, 65550, 786433, 0, 131086, 786433, 0, 196622, 786433, 0, 262158, 786433, 0, 327694, 786433, 0, 393230, 786433, 0, 458766, 786433, 0, 524302, 786433, 0, 589838, 786433, 0, 655374, 786433, 0, 720910, 786433, 0, 786446, 786433, 0, 851982, 786433, 0, 917518, 786433, 0, 983054, 786433, 0, 1048590, 786433, 0, 1114126, 786433, 0, 1179662, 786433, 0, 1245198, 786433, 0, 15, 786433, 0, 65551, 786433, 0, 131087, 786433, 0, 196623, 786433, 0, 262159, 786433, 0, 327695, 786433, 0, 393231, 786433, 0, 458767, 786433, 0, 524303, 786433, 0, 589839, 786433, 0, 655375, 786433, 0, 720911, 786433, 0, 786447, 786433, 0, 851983, 786433, 0, 917519, 786433, 0, 983055, 786433, 0, 1048591, 786433, 0, 1114127, 786433, 0, 1179663, 786433, 0, 1245199, 786433, 0, 16, 786433, 0, 65552, 786433, 0, 131088, 786433, 0, 196624, 786433, 0, 262160, 786433, 0, 327696, 786433, 0, 393232, 786433, 0, 458768, 786433, 0, 524304, 786433, 0, 589840, 786433, 0, 655376, 786433, 0, 720912, 786433, 0, 786448, 786433, 0, 851984, 786433, 0, 917520, 786433, 0, 983056, 786433, 0, 1048592, 786433, 0, 1114128, 786433, 0, 1179664, 786433, 0, 1245200, 786433, 0, 17, 786433, 0, 65553, 786433, 0, 131089, 786433, 0, 196625, 786433, 0, 262161, 786433, 0, 327697, 786433, 0, 393233, 786433, 0, 458769, 786433, 0, 524305, 786433, 0, 589841, 786433, 0, 655377, 786433, 0, 720913, 786433, 0, 786449, 786433, 0, 851985, 786433, 0, 917521, 786433, 0, 983057, 786433, 0, 1048593, 786433, 0, 1114129, 786433, 0, 1179665, 786433, 0, 1245201, 786433, 0, 18, 786433, 0, 65554, 786433, 0, 131090, 786433, 0, 196626, 786433, 0, 262162, 786433, 0, 327698, 786433, 0, 393234, 786433, 0, 458770, 786433, 0, 524306, 786433, 0, 589842, 786433, 0, 655378, 786433, 0, 720914, 786433, 0, 786450, 786433, 0, 851986, 786433, 0, 917522, 786433, 0, 983058, 786433, 0, 1048594, 786433, 0, 1114130, 786433, 0, 1179666, 786433, 0, 1245202, 786433, 0, 19, 786433, 0, 65555, 786433, 0, 131091, 786433, 0, 196627, 786433, 0, 262163, 786433, 0, 327699, 786433, 0, 393235, 786433, 0, 458771, 786433, 0, 524307, 786433, 0, 589843, 786433, 0, 655379, 786433, 0, 720915, 786433, 0, 786451, 786433, 0, 851987, 786433, 0, 917523, 786433, 0, 983059, 786433, 0, 1048595, 786433, 0, 1114131, 786433, 0, 1179667, 786433, 0, 1245203, 786433, 0, 20, 786433, 0, 65556, 786433, 0, 131092, 786433, 0, 196628, 786433, 0, 262164, 786433, 0, 327700, 786433, 0, 393236, 786433, 0, 458772, 786433, 0, 524308, 786433, 0, 589844, 786433, 0, 655380, 786433, 0, 720916, 786433, 0, 786452, 786433, 0, 851988, 786433, 0, 917524, 786433, 0, 983060, 786433, 0, 1048596, 786433, 0, 1114132, 786433, 0, 1179668, 786433, 0, 1245204, 786433, 0, 21, 786433, 0, 65557, 786433, 0, 131093, 786433, 0, 196629, 786433, 0, 262165, 786433, 0, 327701, 786433, 0, 393237, 786433, 0, 458773, 786433, 0, 524309, 786433, 0, 589845, 786433, 0, 655381, 786433, 0, 720917, 786433, 0, 786453, 786433, 0, 851989, 786433, 0, 917525, 786433, 0, 983061, 786433, 0, 1048597, 786433, 0, 1114133, 786433, 0, 1179669, 786433, 0, 1245205, 786433, 0, 22, 786433, 0, 65558, 786433, 0, 131094, 786433, 0, 196630, 786433, 0, 262166, 786433, 0, 327702, 786433, 0, 393238, 786433, 0, 458774, 786433, 0, 524310, 786433, 0, 589846, 786433, 0, 655382, 786433, 0, 720918, 786433, 0, 786454, 786433, 0, 851990, 786433, 0, 917526, 786433, 0, 983062, 786433, 0, 1048598, 786433, 0, 1114134, 786433, 0, 1179670, 786433, 0, 1245206, 786433, 0, 23, 786433, 0, 65559, 786433, 0, 131095, 786433, 0, 196631, 786433, 0, 262167, 786433, 0, 327703, 786433, 0, 393239, 786433, 0, 458775, 786433, 0, 524311, 786433, 0, 589847, 786433, 0, 655383, 786433, 0, 720919, 786433, 0, 786455, 786433, 0, 851991, 786433, 0, 917527, 786433, 0, 983063, 786433, 0, 1048599, 786433, 0, 1114135, 786433, 0, 1179671, 786433, 0, 1245207, 786433, 0, 24, 786433, 0, 65560, 786433, 0, 131096, 786433, 0, 196632, 786433, 0, 262168, 786433, 0, 327704, 786433, 0, 393240, 786433, 0, 458776, 786433, 0, 524312, 786433, 0, 589848, 786433, 0, 655384, 786433, 0, 720920, 786433, 0, 786456, 786433, 0, 851992, 786433, 0, 917528, 786433, 0, 983064, 786433, 0, 1048600, 786433, 0, 1114136, 786433, 0, 1179672, 786433, 0, 1245208, 786433, 0, 25, 786433, 0, 65561, 786433, 0, 131097, 786433, 0, 196633, 786433, 0, 262169, 786433, 0, 327705, 786433, 0, 393241, 786433, 0, 458777, 786433, 0, 524313, 786433, 0, 589849, 786433, 0, 655385, 786433, 0, 720921, 786433, 0, 786457, 786433, 0, 851993, 786433, 0, 917529, 786433, 0, 983065, 786433, 0, 1048601, 786433, 0, 1114137, 786433, 0, 1179673, 786433, 0, 1245209, 786433, 0, 26, 786433, 0, 65562, 786433, 0, 131098, 786433, 0, 196634, 786433, 0, 262170, 786433, 0, 327706, 786433, 0, 393242, 786433, 0, 458778, 786433, 0, 524314, 786433, 0, 589850, 786433, 0, 655386, 786433, 0, 720922, 786433, 0, 786458, 786433, 0, 851994, 786433, 0, 917530, 786433, 0, 983066, 786433, 0, 1048602, 786433, 0, 1114138, 786433, 0, 1179674, 786433, 0, 1245210, 786433, 0, 27, 786433, 0, 65563, 786433, 0, 131099, 786433, 0, 196635, 786433, 0, 262171, 786433, 0, 327707, 786433, 0, 393243, 786433, 0, 458779, 786433, 0, 524315, 786433, 0, 589851, 786433, 0, 655387, 786433, 0, 720923, 786433, 0, 786459, 786433, 0, 851995, 786433, 0, 917531, 786433, 0, 983067, 786433, 0, 1048603, 786433, 0, 1114139, 786433, 0, 1179675, 786433, 0, 1245211, 786433, 0, 28, 786433, 0, 65564, 786433, 0, 131100, 786433, 0, 196636, 786433, 0, 262172, 786433, 0, 327708, 786433, 0, 393244, 786433, 0, 458780, 786433, 0, 524316, 786433, 0, 589852, 786433, 0, 655388, 786433, 0, 720924, 786433, 0, 786460, 786433, 0, 851996, 786433, 0, 917532, 786433, 0, 983068, 786433, 0, 1048604, 786433, 0, 1114140, 786433, 0, 1179676, 786433, 0, 1245212, 786433, 0, 29, 786433, 0, 65565, 786433, 0, 131101, 786433, 0, 196637, 786433, 0, 262173, 786433, 0, 327709, 786433, 0, 393245, 786433, 0, 458781, 786433, 0, 524317, 786433, 0, 589853, 786433, 0, 655389, 786433, 0, 720925, 786433, 0, 786461, 786433, 0, 851997, 786433, 0, 917533, 786433, 0, 983069, 786433, 0, 1048605, 786433, 0, 1114141, 786433, 0, 1179677, 786433, 0, 1245213, 786433, 0, 30, 786433, 0, 65566, 786433, 0, 131102, 786433, 0, 196638, 786433, 0, 262174, 786433, 0, 327710, 786433, 0, 393246, 786433, 0, 458782, 786433, 0, 524318, 786433, 0, 589854, 786433, 0, 655390, 786433, 0, 720926, 786433, 0, 786462, 786433, 0, 851998, 786433, 0, 917534, 786433, 0, 983070, 786433, 0, 1048606, 786433, 0, 1114142, 786433, 0, 1179678, 786433, 0, 1245214, 786433, 0, 31, 786433, 0, 65567, 786433, 0, 131103, 786433, 0, 196639, 786433, 0, 262175, 786433, 0, 327711, 786433, 0, 393247, 786433, 0, 458783, 786433, 0, 524319, 786433, 0, 589855, 786433, 0, 655391, 786433, 0, 720927, 786433, 0, 786463, 786433, 0, 851999, 786433, 0, 917535, 786433, 0, 983071, 786433, 0, 1048607, 786433, 0, 1114143, 786433, 0, 1179679, 786433, 0, 1245215, 786433, 0, 32, 786433, 0, 65568, 786433, 0, 131104, 786433, 0, 196640, 786433, 0, 262176, 786433, 0, 327712, 786433, 0, 393248, 786433, 0, 458784, 786433, 0, 524320, 786433, 0, 589856, 786433, 0, 655392, 786433, 0, 720928, 786433, 0, 786464, 786433, 0, 852000, 786433, 0, 917536, 786433, 0, 983072, 786433, 0, 1048608, 786433, 0, 1114144, 786433, 0, 1179680, 786433, 0, 1245216, 786433, 0)
layer_1/name = "sol"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(131073, 1048577, 10, 196609, 1048577, 10, 262145, 1048577, 10, 327681, 1048577, 10, 393217, 1048577, 10, 458753, 1048577, 10, 524289, 1048577, 10, 589825, 1048577, 10, 655361, 1048577, 10, 720897, 1048577, 10, 786433, 1048577, 10, 131074, 1048577, 10, 196610, 917505, 9, 262146, 917505, 10, 327682, 917505, 10, 393218, 917505, 10, 458754, 917505, 10, 524290, 917505, 10, 589826, 917505, 10, 655362, 917505, 10, 720898, 917505, 10, 786434, 917505, 10, 131075, 1048577, 10, 196611, 983041, 9, 262147, 983041, 10, 327683, 983041, 10, 393219, 983041, 10, 458755, 983041, 10, 524291, 983041, 10, 589827, 983041, 10, 655363, 983041, 10, 720899, 983041, 10, 786435, 983041, 10, 131076, 1048577, 10, 196612, 983041, 9, 262148, 983041, 10, 327684, 983041, 10, 393220, 983041, 10, 458756, 983041, 10, 524292, 983041, 10, 589828, 983041, 10, 655364, 983041, 10, 720900, 983041, 10, 786436, 983041, 10, 131077, 1048577, 10, 196613, 983041, 9, 262149, 983041, 10, 327685, 983041, 10, 393221, 983041, 10, 458757, 983041, 10, 524293, 983041, 10, 589829, 983041, 10, 655365, 983041, 10, 720901, 983041, 10, 786437, 983041, 10, 131078, 1048577, 10, 196614, 983041, 9, 262150, 983041, 10, 327686, 983041, 10, 393222, 983041, 10, 458758, 983041, 10, 524294, 983041, 10, 589830, 983041, 10, 655366, 983041, 10, 720902, 983041, 10, 786438, 983041, 10, 131079, 1048577, 10, 196615, 983041, 9, 262151, 983041, 10, 327687, 983041, 10, 393223, 983041, 10, 458759, 983041, 10, 524295, 983041, 10, 589831, 983041, 10, 655367, 983041, 10, 720903, 983041, 10, 786439, 983041, 10, 131080, 1048577, 10, 196616, 983041, 9, 262152, 983041, 10, 327688, 983041, 10, 393224, 983041, 10, 458760, 983041, 10, 524296, 983041, 10, 589832, 983041, 10, 655368, 983041, 10, 720904, 983041, 10, 786440, 983041, 10, 131081, 1048577, 10, 196617, 983041, 9, 262153, 983041, 10, 327689, 983041, 10, 393225, 983041, 10, 458761, 983041, 10, 524297, 983041, 10, 589833, 983041, 10, 655369, 983041, 10, 720905, 983041, 10, 786441, 983041, 10, 131082, 1048577, 10, 196618, 983041, 9, 262154, 983041, 10, 327690, 983041, 10, 393226, 983041, 10, 458762, 983041, 10, 524298, 983041, 10, 589834, 983041, 10, 655370, 983041, 10, 720906, 983041, 10, 786442, 983041, 10, 131083, 1048577, 10, 196619, 983041, 9, 262155, 983041, 10, 327691, 983041, 10, 393227, 983041, 10, 458763, 983041, 10, 524299, 983041, 10, 589835, 983041, 10, 655371, 983041, 10, 720907, 983041, 10, 786443, 983041, 10, 131084, 1048577, 10, 196620, 983041, 9, 262156, 983041, 10, 327692, 983041, 10, 393228, 983041, 10, 458764, 983041, 10, 524300, 983041, 10, 589836, 983041, 10, 655372, 983041, 10, 720908, 983041, 10, 786444, 983041, 10, 131085, 1048577, 10, 196621, 983041, 9, 262157, 983041, 10, 327693, 983041, 10, 393229, 983041, 10, 458765, 983041, 10, 524301, 983041, 10, 589837, 983041, 10, 655373, 983041, 10, 720909, 983041, 10, 786445, 983041, 10, 131086, 1048577, 10, 196622, 983041, 9, 262158, 983041, 10, 327694, 983041, 10, 393230, 983041, 10, 458766, 983041, 10, 524302, 983041, 10, 589838, 983041, 10, 655374, 983041, 10, 720910, 983041, 10, 786446, 983041, 10, 131087, 1048577, 10, 196623, 983041, 9, 262159, 983041, 10, 327695, 983041, 10, 393231, 983041, 10, 458767, 983041, 10, 524303, 983041, 10, 589839, 983041, 10, 655375, 983041, 10, 720911, 983041, 10, 786447, 983041, 10, 131088, 1048577, 10, 196624, 983041, 9, 262160, 983041, 10, 327696, 983041, 10, 393232, 983041, 10, 458768, 983041, 10, 524304, 983041, 10, 589840, 983041, 10, 655376, 983041, 10, 720912, 983041, 10, 786448, 983041, 10, 131089, 1048577, 10, 196625, 983041, 9, 262161, 983041, 10, 327697, 983041, 10, 393233, 983041, 10, 458769, 983041, 10, 524305, 983041, 10, 589841, 983041, 10, 655377, 983041, 10, 720913, 983041, 10, 786449, 983041, 10, 131090, 1048577, 10, 196626, 983041, 9, 262162, 983041, 10, 327698, 983041, 10, 393234, 983041, 10, 458770, 983041, 10, 524306, 983041, 10, 589842, 983041, 10, 655378, 983041, 10, 720914, 983041, 10, 786450, 983041, 10, 131091, 1048577, 10, 196627, 983041, 9, 262163, 983041, 10, 327699, 983041, 10, 393235, 983041, 10, 458771, 983041, 10, 524307, 983041, 10, 589843, 983041, 10, 655379, 983041, 10, 720915, 983041, 10, 786451, 983041, 10, 131092, 1048577, 10, 196628, 983041, 9, 262164, 983041, 10, 327700, 983041, 10, 393236, 983041, 10, 458772, 983041, 10, 524308, 983041, 10, 589844, 983041, 10, 655380, 983041, 10, 720916, 983041, 10, 786452, 983041, 10, 131093, 1048577, 10, 196629, 983041, 9, 262165, 983041, 10, 327701, 983041, 10, 393237, 983041, 10, 458773, 983041, 10, 524309, 983041, 10, 589845, 983041, 10, 655381, 983041, 10, 720917, 983041, 10, 786453, 983041, 10, 131094, 1048577, 10, 196630, 983041, 9, 262166, 983041, 10, 327702, 983041, 10, 393238, 983041, 10, 458774, 983041, 10, 524310, 983041, 10, 589846, 983041, 10, 655382, 983041, 10, 720918, 983041, 10, 786454, 983041, 10, 131095, 1048577, 10, 196631, 983041, 9, 262167, 983041, 10, 327703, 983041, 10, 393239, 983041, 10, 458775, 983041, 10, 524311, 983041, 10, 589847, 983041, 10, 655383, 983041, 10, 720919, 983041, 10, 786455, 983041, 10, 131096, 1048577, 10, 196632, 983041, 9, 262168, 983041, 10, 327704, 983041, 10, 393240, 983041, 10, 458776, 983041, 10, 524312, 983041, 10, 589848, 983041, 10, 655384, 983041, 10, 720920, 983041, 10, 786456, 983041, 10)
layer_2/name = "mur"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array(0, 720897, 1, 65536, 720897, 2, 131072, 720897, 2, 196608, 720897, 2, 262144, 720897, 2, 1, 65537, 5, 65537, 65537, 6, 2, 65537, 5, 65538, 65537, 6, 3, 65537, 5, 65539, 65537, 6, 4, 65537, 5, 65540, 65537, 6, 5, 65537, 5, 65541, 65537, 6, 6, 65537, 5, 65542, 65537, 6, 7, 65537, 5, 65543, 65537, 6, 8, 65537, 5, 65544, 65537, 6, 9, 65537, 5, 65545, 65537, 6, 10, 65537, 5, 65546, 65537, 6, 11, 65537, 5, 65547, 65537, 6, 12, 65537, 5, 65548, 65537, 6, 13, 65537, 5, 65549, 65537, 6, 14, 65537, 5, 65550, 65537, 6, 15, 65537, 5, 65551, 65537, 6, 16, 65537, 5, 65552, 65537, 6, 17, 65537, 5, 65553, 65537, 6, 18, 65537, 5, 65554, 65537, 6, 19, 65537, 5, 65555, 65537, 6, 20, 65537, 5, 65556, 65537, 6, 21, 65537, 5, 65557, 65537, 6, 22, 65537, 5, 65558, 65537, 6, 23, 65537, 5, 65559, 65537, 6, 24, 131073, 5, 65560, 131073, 6, 327680, 720897, 2, 393216, 720897, 2, 458752, 720897, 2, 524288, 720897, 2, 589824, 720897, 2, 655360, 720897, 2, 720896, 720897, 2, 851968, 720897, 3, 65561, 851969, 2, 131097, 851969, 2, 196633, 851969, 2, 262169, 851969, 2, 327705, 851969, 2, 393241, 851969, 2, 458777, 851969, 2, 524313, 851969, 2, 589849, 851969, 2, 655385, 851969, 2, 720921, 851969, 2, 851993, 851969, 3, 25, 851969, 1, 851969, 786433, 3, 851970, 786433, 3, 851971, 786433, 3, 851972, 786433, 3, 851973, 786433, 3, 851974, 786433, 3, 851975, 786433, 3, 851976, 786433, 3, 851977, 786433, 3, 851978, 786433, 3, 851979, 786433, 3, 851980, 786433, 3, 851981, 786433, 3, 851982, 786433, 3, 851983, 786433, 3, 851984, 786433, 3, 851985, 786433, 3, 851986, 786433, 3, 851987, 786433, 3, 851988, 786433, 3, 851989, 786433, 3, 851990, 786433, 3, 851991, 786433, 3, 851992, 786433, 3, 786457, 851969, 2, 786432, 720897, 2, 196612, 196608, 42, 262148, 196608, 43, 196613, 262144, 42, 262149, 262144, 43, 196614, 327680, 42, 262150, 327680, 43, 655365, 0, 42, 720901, 0, 43, 655366, 65536, 42, 720902, 65536, 43, 655367, 131072, 42, 720903, 131072, 43)
layer_3/name = "indoor"
layer_3/enabled = true
layer_3/modulate = Color(1, 1, 1, 1)
layer_3/y_sort_enabled = true
layer_3/y_sort_origin = 0
layer_3/z_index = 1
layer_3/tile_data = PackedInt32Array(6, 458752, 51, 65542, 458752, 52, 131078, 458752, 53, 7, 655360, 51, 65543, 655360, 52, 131079, 655360, 53, 8, 655360, 51, 65544, 655360, 52, 131080, 655360, 53, 9, 589824, 51, 65545, 589824, 52, 131081, 589824, 53, 10, 524288, 51, 65546, 524288, 52, 131082, 524288, 53, 131077, 262144, 31, 262147, 262144, 31, 327684, 262144, 31, 327685, 262144, 31, 19, 786432, 65560, 65555, 786432, 65561, 18, 786432, 24, 65554, 786432, 25, 393237, 720896, 36, 458773, 720896, 36, 524309, 720896, 37, 327701, 720896, 35, 393238, 786432, 36, 458774, 786432, 37, 589826, 327680, 36, 13, 851968, 38, 65549, 851968, 39, 14, 917504, 38, 65550, 917504, 39, 21, 655360, 71, 65557, 655360, 72, 131093, 655360, 73, 22, 720896, 71, 65558, 720896, 72, 131094, 720896, 73, 4, 589824, 24, 65540, 589824, 25, 3, 131072, 70, 65539, 131072, 71, 262168, 983040, 39, 327704, 983040, 40, 393240, 983040, 41, 5, 655360, 24, 65541, 655360, 25, 20, 65536, 19, 393217, 589824, 83, 458753, 589824, 81, 524289, 589824, 82, 393218, 655360, 83, 458754, 655360, 81, 524290, 655360, 82, 196613, 786432, 74, 196614, 851968, 74, 196612, 786432, 75, 262148, 786432, 76, 786433, 720896, 65584, 720913, 131072, 40, 655377, 131072, 40, 524306, 393216, 40, 458770, 393216, 40, 458769, 131072, 40, 524305, 327680, 40, 720910, 262144, 40, 655373, 131072, 40, 524301, 131072, 40, 458766, 262144, 40, 327694, 262144, 40, 327698, 262144, 40, 262162, 262144, 40, 262158, 262144, 40, 720907, 262144, 40, 655371, 262144, 40, 524298, 262144, 40, 458762, 262144, 40, 393226, 262144, 40, 262155, 262144, 40, 720906, 131072, 40, 458761, 131072, 40, 524297, 131072, 40, 327693, 131072, 40, 262154, 327680, 40, 720909, 327680, 40, 458765, 327680, 40, 393225, 327680, 40, 262161, 327680, 40, 327697, 327680, 40, 262157, 327680, 40, 655369, 327680, 40, 15, 851968, 40, 65551, 851968, 41, 16, 917504, 40, 65552, 917504, 41, 393221, 720896, 35, 458757, 720896, 36, 524293, 720896, 37, 458758, 786432, 36, 524294, 786432, 37, 458755, 65536, 33, 786438, 458752, 54, 786439, 458752, 54, 786440, 458752, 54, 131096, 786432, 66, 11, 655360, 44, 65556, 786432, 45, 65538, 196608, 38, 327681, 589824, 80, 327682, 655360, 80, 65537, 196608, 36)

[node name="Player" parent="." instance=ExtResource("3_4tqad")]
z_index = 1
y_sort_enabled = true
position = Vector2(313, 69)
scale = Vector2(0.5, 0.5)

[node name="Pause" parent="Player" instance=ExtResource("4_k1pyy")]
visible = false
z_index = 1
offset_left = 27.8176
offset_top = -13.0133
offset_right = 27.8176
offset_bottom = -13.0133
scale = Vector2(0.2, 0.2)

[node name="Camera2D" type="Camera2D" parent="Player"]
y_sort_enabled = true
position = Vector2(0, 2)
scale = Vector2(2, 2)
zoom = Vector2(5.5, 5.5)

[node name="Arnaud" parent="." instance=ExtResource("3_0n481")]
z_index = 1
position = Vector2(90, 171)
scale = Vector2(0.3, 0.3)

[node name="Bastien" parent="." instance=ExtResource("4_4hwa7")]
z_index = 1
position = Vector2(30, 71)
scale = Vector2(0.3, 0.3)

[node name="Marie" parent="." instance=ExtResource("5_g6qpd")]
z_index = 1
position = Vector2(260, 188)
scale = Vector2(0.3, 0.3)

[node name="Tristan" parent="." instance=ExtResource("6_53ft2")]
z_index = 1
position = Vector2(196, 89)
scale = Vector2(0.3, 0.3)

[node name="Policier2" parent="." instance=ExtResource("7_bf800")]
z_index = 1
position = Vector2(340, 49)
scale = Vector2(0.5, 0.5)

[node name="tpClass" type="Marker2D" parent="."]
position = Vector2(313, 82)

[node name="bedroom" parent="." instance=ExtResource("9_7h288")]
position = Vector2(659, 0)

[node name="Sabine" parent="bedroom" index="2"]
position = Vector2(259, 42)

[node name="tpBedroom" type="Marker2D" parent="."]
position = Vector2(802, 153)

[node name="tpPhoneBedroom" type="Marker2D" parent="."]
position = Vector2(558, 228)

[node name="tpPhoneClass" type="Marker2D" parent="."]
position = Vector2(531, 200)

[node name="Phone" parent="." instance=ExtResource("10_ij143")]
top_level = true
z_index = 1
offset_left = 116.0
offset_top = 78.0
offset_right = 2276.0
offset_bottom = 78.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.1, 0.1)
choixConv = ["MamanGaston", "GroupeClasseGaston"]
taille = 1

[node name="tpToBedroom" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="tpToBedroom"]
position = Vector2(304, 32)
shape = SubResource("RectangleShape2D_uw4gg")

[node name="tpToClass" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="tpToClass"]
position = Vector2(803, 174)
shape = SubResource("RectangleShape2D_uw4gg")

[connection signal="finScene" from="Policier2" to="." method="_on_policier_2_fin_scene"]
[connection signal="finSabine" from="bedroom/Sabine" to="." method="_on_sabine_fin_sabine"]
[connection signal="finSabine" from="bedroom/Sabine" to="Policier2" method="_on_sabine_fin_sabine"]
[connection signal="area_entered" from="tpToBedroom" to="." method="_on_tp_to_bedroom_area_entered"]
[connection signal="area_entered" from="tpToClass" to="." method="_on_tp_to_class_area_entered"]

[editable path="bedroom"]
